--- a/TextRPG_ZOMBIE/TextRPG_ZOMBIE/TextRPG_ZOMBIE.vcxproj
+++ b/TextRPG_ZOMBIE/TextRPG_ZOMBIE/TextRPG_ZOMBIE.vcxproj
@@ -42,7 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -130,10 +130,14 @@
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="BossZombie.cpp" />
     <ClCompile Include="Character.cpp" />
-    <ClCompile Include="GameMode.cpp" />
+    <ClCompile Include="GamemodeBase\BattleScene.cpp" />
+    <ClCompile Include="GamemodeBase\CharacterCreation.cpp" />
+    <ClCompile Include="GamemodeBase\GameMode.cpp" />
+    <ClCompile Include="GamemodeBase\MenuScene.cpp" />
+    <ClCompile Include="GamemodeBase\OpeningScene.cpp" />
     <ClCompile Include="HalfZombie.cpp" />
     <ClCompile Include="Item.cpp" />
-    <ClCompile Include="MonsterDropItem.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="NormalZombie.cpp" />
     <ClCompile Include="RandomUtil.cpp" />
     <ClCompile Include="Shop.cpp" />
@@ -144,7 +148,11 @@
     <ClInclude Include="Actor.h" />
     <ClInclude Include="BossZombie.h" />
     <ClInclude Include="Character.h" />
-    <ClInclude Include="GameMode1.h" />
+    <ClInclude Include="GamemodeBase\BattleScene.h" />
+    <ClInclude Include="GamemodeBase\GameMode.h" />
+    <ClInclude Include="GamemodeBase\MenuScene.h" />
+    <ClInclude Include="GamemodeBase\OpeningScene.h" />
+    <ClInclude Include="GamemodeBase\CharacterCreation.h" />
     <ClInclude Include="HalfZombie.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="MonsterDropItem.h" />
