기쁜 마음에 또 규칙 따위

--- a/TextRPG_ZOMBIE/TextRPG_ZOMBIE/TextRPG_ZOMBIE.vcxproj
+++ b/TextRPG_ZOMBIE/TextRPG_ZOMBIE/TextRPG_ZOMBIE.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="HalfZombie.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MonsterDropItem.cpp" />
     <ClCompile Include="NormalZombie.cpp" />
     <ClCompile Include="RandomUtil.cpp" />
     <ClCompile Include="Shop.cpp" />
