--- a/TextRPG_ZOMBIE/TextRPG_ZOMBIE/TextRPG_ZOMBIE.vcxproj.filters
+++ b/TextRPG_ZOMBIE/TextRPG_ZOMBIE/TextRPG_ZOMBIE.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="GamemodeBase\MenuScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="MonsterDropItem.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
