--- a/TextRPG_ZOMBIE/TextRPG_ZOMBIE/TextRPG_ZOMBIE.vcxproj.filters
+++ b/TextRPG_ZOMBIE/TextRPG_ZOMBIE/TextRPG_ZOMBIE.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="MonsterDropItem.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="GamemodeBase\EndingScene.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
@@ -114,6 +117,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="GamemodeBase\MenuScene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GamemodeBase\EndingScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
